small design changes making buttons better cols

--- a/newTab.html
+++ b/newTab.html
@@ -92,9 +92,9 @@
             <div class="modal-body" id="infoModal">
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-danger" id="removeBookmarkModal" data-dismiss="modal" style="position:sticky;right: 100%;">Delete Bookmark</button>
-              <button type="button" class="btn btn-danger" id="removeFolderModal" data-dismiss="modal" style="position:sticky;right: 100%;">Delete Folder</button>
-              <button type="button" class="btn btn-primary" id="saveChangesInfoModal" data-dismiss="modal">Save & Close</button>
+              <button type="button" class="btn" id="removeBookmarkModal" data-dismiss="modal" style="position:sticky;right: 100%;">Delete Bookmark</button>
+              <button type="button" class="btn" id="removeFolderModal" data-dismiss="modal" style="position:sticky;right: 100%;">Delete Folder</button>
+              <button type="button" class="btn" id="saveChangesInfoModal" data-dismiss="modal">Save & Close</button>
             </div>
         </div>
       </div>
