--- a/options.html
+++ b/options.html
@@ -64,26 +64,26 @@
           </div>
 
         </div>
-        <div id="selectOwn" class="col-md-5 mx-2" style="margin-top: 50px; background-color: #DCDCDC;border-radius: 1em; border: 1px solid #A9A9A9;">
+        <div id="selectOwn" class="col-md-5 mx-2 " style="margin-top: 50px;background-color: #DCDCDC;border-radius: 1em; border: 1px solid #A9A9A9;">
           
         <div class="d-flex justify-content-center my-2" style="font-size: x-large;">Select your own colour</div>
           <div class="mt-2">
             <div class="d-flex" style="width: 100%;">
               <div class="d-flex col-8">Background colour</div>
               <div class="input-group mb-3">
-                <div class="input-group-prepend">
+                <!-- <div class="input-group-prepend">
                   <span class="input-group-text" id="basic-addon1">#</span>
-                </div>
-                <input type="text" class="form-control" id="backgroundColour">
+                </div> -->
+                <input type="color" class="form-control" id="backgroundColour">
               </div>
             </div>
             <div class="d-flex" style="width: 100%;">
                 <div class="d-flex col-8">Bookmark colour</div>
                 <div class="input-group mb-3">
-                  <div class="input-group-prepend">
+                  <!-- <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">#</span>
-                  </div>
-                  <input type="text" class="form-control" id="bookmarkColour">
+                  </div> -->
+                  <input type="color" class="form-control" id="bookmarkColour">
                 </div>
             </div>
             <div class=" d-flex flex-row">
