changes to abide by firefox rules

--- a/newTab.html
+++ b/newTab.html
@@ -9,17 +9,15 @@
     <title>New Tab - Bookmark Manager</title>
     
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/dependencies/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/dependencies/jquery-3.6.0.min.js"></script>
     <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
     <!-- For fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Self made stylesheet -->
-    <!-- <link rel="stylesheet" href="styles.css"> -->
     <!-- For picking colours  -->
     <link rel="stylesheet" href="styles.css">
 
