--- a/options.html
+++ b/options.html
@@ -6,6 +6,7 @@
     <!-- jQuery library -->
     <script src="/dependencies/jquery-3.6.0.min.js"></script>
     <!-- Popper JS -->
+    <script src="/dependencies/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
 	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
     <!-- For fonts -->
