making it not buggy by using boostrap.bundle.js instead of bootstrap.js

--- a/newTab.html
+++ b/newTab.html
@@ -8,14 +8,13 @@
 <head>
     <title>New Tab - Bookmark Manager</title>
     
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="/dependencies/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="/dependencies/jquery-3.6.0.min.js"></script>
-    <!-- Popper JS -->
-    <script src="/dependencies/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
-	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="/dependencies/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+
     <!-- For fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Self made stylesheet -->
