--- a/options.html
+++ b/options.html
@@ -2,13 +2,12 @@
 <html>
 <head>
     <title>Options page</title>
-    <link rel="stylesheet" href="/dependencies/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="/dependencies/jquery-3.6.0.min.js"></script>
-    <!-- Popper JS -->
-    <script src="/dependencies/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
-	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+	  <script src="/dependencies/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/dependencies/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+
     <!-- For fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="google" content="notranslate">
